# Sparrow

Sparrow/: CMakeLists.txt
Sparrow/src/: CMakeLists.txt  GKR.cpp  GKR.h  Poly_Commit.cpp  Poly_Commit.h  circuit.cpp  circuit.h  config_pc.hpp  main.cpp  prover.cpp  prover.h  utils.cpp  utils.hpp  verifier.cpp  verifier.h  witness_stream.cpp  witness_stream.h
zkFTP/: CMakeLists.txt  untitled11.py
zkFTP/src/: Aggr.cpp  Aggr.h  BuildForest.cpp  BuildForest.h  BuildForest_streaming.cpp  BuildForest_streaming.h  BuildTree.cpp  BuildTree.h  BuildTree_streaming.cpp  BuildTree_streaming.h  CMakeCache.txt  GKR.cpp  GKR.h  GKRProof.hpp  Inference.cpp  Inference.h  MLP.cpp  Makefile  Poly_Commit.cpp  Poly_Commit.h  VerifyTree.cpp  VerifyTree.h  cmake_install.cmake  elliptic_curves.cpp  lookups.cpp  lookups.h  main.cpp  mimc.cpp  mimc.h  pol_verifier.cpp  pol_verifier.h  polynomial.cpp  polynomial.h  prover.cpp  prover.h  quantization.cpp  quantization.h  space_efficient_sumcheck.cpp  space_efficient_sumcheck.h  sumcheck.cpp  (+9 more)
